Baixando as dependencias do bootstrap e jquery via yarn add e/ou npm install

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Minha Pagina</title>
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" >
 </head>
 <body>
 <h1>Ola Mundo</h1>
@@ -15,9 +15,8 @@
 
 
 
-<script src="assets/js/jquery-3.5.0.min.js" ></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="node_modules/jquery/dist/jquery.min.js" ></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
