Trabalhando com media querys para identificar o tamanho das telas.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <title>Minha Pagina</title>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
-<h1>Ola Mundo</h1>
 
-
+<div class="container">
+     <h1>Ola mundo!</h1>
+</div>
+<div class="container-fluid">
+    <h1>Ola mundo!</h1>
+</div>
 
 
 <script src="node_modules/jquery/dist/jquery.min.js" ></script>
