trabalhando flex com justify-content start,end, center, between e around com comentarios

--- a/flex-justify-content.html
+++ b/flex-justify-content.html
@@ -14,27 +14,31 @@
 <body>
 
     <div class="container">
+        Alinha os itens ao início do container
         <div class="d-flex justify-content-start bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
-
+        Alinha os itens ao final do container.
         <div class="d-flex justify-content-end bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
+        Alinha os itens ao centro do container.
         <div class="d-flex justify-content-center bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
+        Cria um espaçamento igual entre os elementos. Mantendo o primeiro grudado no início e o último no final
         <div class="d-flex justify-content-between bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
             <div class="bg p-2">3</div>
         </div>
+        Cria um espaçamento entre os elementos. Os espaçamentos do meio são duas vezes maiores que o inicial e final.
         <div class="d-flex justify-content-around bg">
             <div class="bg p-2">1</div>
             <div class="bg p-2">2</div>
