Descrição de justify-content

--- a/flex-justify-content.html
+++ b/flex-justify-content.html
@@ -13,6 +13,12 @@
 </head>
 <body>
 
+
+
+Alinha os itens flex no container de acordo com a direção. A propriedade só funciona se os itens atuais não ocuparem todo o container. Isso significa que ao definir flex: 1; ou algo similar nos itens, a propriedade não terá mais função
+Excelente propriedade para ser usada em casos que você deseja alinhar um item na ponta esquerda e outro na direita, como em um simples header com marca e navegação.
+
+
     <div class="container">
         Alinha os itens ao início do container
         <div class="d-flex justify-content-start bg">
